am terminat de create , admin/user worktime, user status, user register, user time off acum totul este functional 100%